--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-fetch": "^4.1.0",
     "lucide-react": "^0.543.0",
     "next": "15.5.3",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
