--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "shiki": "^3.12.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
